syntax = "proto3";
package test;

service Menu {
    rpc Save (MenuModel) returns (MenuRes) {}
    rpc List (RepMenuList) returns (MenuRes) {}
    rpc View (RepMenuView) returns (MenuRes) {}
}

message RepMenuList  {
    int32 PID = 1;
}
message RepMenuView  {
    int32 ID = 1;
}

message MenuModel  {
    int32 ID = 1;
    int32 PID = 2;
    string CODE = 3;
    string URL = 4;
    string TYPE = 5;
    string module = 6;
}

message MenuRes {
    int32 code = 1;
    string msg = 2;
    repeated MenuModel data_info = 3;
}
