syntax = "proto3";
package test;

service RBAC {
    rpc Modules (RoleRep) returns (ModuleRes) {}
    rpc Enforce (EnforceRep) returns (EnforceRes) {}
}
message RoleRep  {
    repeated string role = 1;
}
message EnforceRep  {
    repeated string role = 1;
    string method = 2;
    string pattern = 3;
}

message RBACInfo  {
    string role = 1;
    string method = 2;
    string pattern = 3;
    string module = 4;
}

message EnforceRes {
    int64 code = 1;
    string msg = 2;
}

message ModuleRes {
    int64 code = 1;
    string msg = 2;
    repeated RBACInfo data_info = 3;
}
